--- a/index.html
+++ b/index.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
+    <title>Full Screen Slider</title>
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
-      integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Full Screen Slider</title>
   </head>
   <body>
     <div class="slider">
@@ -24,63 +19,53 @@
         <div class="content">
           <h1>Slide One</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-            adipisci sit dignissimos doloribus quae similique?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit hic
+            maxime, voluptatibus labore doloremque vero!
           </p>
         </div>
       </div>
-    </div>
-    <div class="slider">
       <div class="slide">
         <div class="content">
           <h1>Slide Two</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-            adipisci sit dignissimos doloribus quae similique?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit hic
+            maxime, voluptatibus labore doloremque vero!
           </p>
         </div>
       </div>
-    </div>
-    <div class="slider">
       <div class="slide">
         <div class="content">
           <h1>Slide Three</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-            adipisci sit dignissimos doloribus quae similique?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit hic
+            maxime, voluptatibus labore doloremque vero!
           </p>
         </div>
       </div>
-    </div>
-    <div class="slider">
       <div class="slide">
         <div class="content">
           <h1>Slide Four</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-            adipisci sit dignissimos doloribus quae similique?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit hic
+            maxime, voluptatibus labore doloremque vero!
           </p>
         </div>
       </div>
-    </div>
-    <div class="slider">
       <div class="slide">
         <div class="content">
           <h1>Slide Five</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-            adipisci sit dignissimos doloribus quae similique?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit hic
+            maxime, voluptatibus labore doloremque vero!
           </p>
         </div>
       </div>
-    </div>
-    <div class="slider">
       <div class="slide">
         <div class="content">
           <h1>Slide Six</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-            adipisci sit dignissimos doloribus quae similique?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit hic
+            maxime, voluptatibus labore doloremque vero!
           </p>
         </div>
       </div>
