--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="slider">
@@ -75,6 +75,6 @@
       <button id="next"><i class="fas fa-arrow-right"></i></button>
     </div>
 
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
